// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardKebabMenuButtonTest copies failure details and show the toast 1`] = `
"<Fragment>
  <CustomizedActionButton className=\\"kebabMenuButton\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
  <Toast onTimeout={[Function: onTimeout]} deps={{...}} timeoutLength={1000}>
    Failure details copied.
  </Toast>
</Fragment>"
`;

exports[`CardKebabMenuButtonTest render 1`] = `
"<Fragment>
  <CustomizedActionButton className=\\"kebabMenuButton\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</Fragment>"
`;

exports[`CardKebabMenuButtonTest should click file issue, invalid settings 1`] = `
"<Fragment>
  <CustomizedActionButton className=\\"kebabMenuButton\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={true} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</Fragment>"
`;

exports[`CardKebabMenuButtonTest should file issue, valid settings 1`] = `
"<Fragment>
  <CustomizedActionButton className=\\"kebabMenuButton\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</Fragment>"
`;

exports[`CardKebabMenuButtonTest shows failure message if copy failed 1`] = `
"<Fragment>
  <CustomizedActionButton className=\\"kebabMenuButton\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
  <Toast onTimeout={[Function: onTimeout]} deps={{...}} timeoutLength={1000}>
    Failed to copy failure details. Please try again.
  </Toast>
</Fragment>"
`;
